can create group chats now, can edit group chat remove or add new users  (only chats admin)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,11 @@ svg {
   opacity: 0.5;
 }
 
-.user-item:hover>div>div>.actions {
+.user:hover>.hover {
+  opacity: 1;
+}
+
+.user-item:hover>div>div>.actions, .user-item:hover>div>.actions {
   opacity: 1;
 }
 
